changes to courses#index and attempt to fix sidr on mobile

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -489,7 +489,7 @@ body {
   display: block;
   width: 50%;
   position: absolute;
-  top: 10px;
+  top: 20px;
   right: 0;
   padding-bottom: 100px;
 }
