--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -310,7 +310,7 @@
 	margin-right: 2%;
 	padding-bottom: 10px;
 	padding-top: 10px;
-	border-top: 1px solid $gray-x-x-lt;
+	border-bottom: 1px solid $gray-x-x-lt;
 	min-height: 80px;
 	height: auto;
 	overflow: hidden;
