--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -1,10 +1,11 @@
+
 /*********************/
 /******* FONTS *******/
 /*********************/
 h1 {
 	font-weight: 300;
 	font-size: 2.3em;
-	padding: 2px 0 5px 0;
+	padding: 5px 0 5px 0;
 	margin: 0;
 }
 
@@ -157,6 +158,15 @@ input[type="submit"] {
 		opacity: 1;
 		background-image: url("icons/lock.png");
 	}
+	.dates {
+		margin: 0 auto;
+		text-align: center;
+		color: $gray-x-x-lt;
+		padding-top: 15px;
+		width: 60%;
+		font-size: 18px;
+		font-weight: normal;
+	}
 }
 
 .course-tile {
@@ -191,13 +201,22 @@ input[type="submit"] {
 		}
 		.description {
 			font-weight: 300;
-			font-size: 14px;
-			color: $gray-med;
+			font-size: 13px;
+			color: $gray;
 			line-height: 1.3;
 			padding-top: 10px;
 			max-height: 75px;
 			overflow: hidden;
 		}
+	}
+	.percent-complete {
+		display: block;
+		position: absolute;
+		bottom: 20px;
+		left: 15px;
+		font-size: 22px;
+		font-weight: 300;
+		color: white;
 	}
 	.progress {
 		position: absolute;
@@ -482,6 +501,7 @@ input[type="submit"] {
 	font-size: 15px;
 	letter-spacing: 0.1;
 	color: $gray;
+	padding-top: 20px;
 }
 
 .assignment-container {
